--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ p{
 }
 
 .jumbotron {
-  background-image: url("images/bacteria2.jpg");
+  background-image: url("images/bacteria.jpg");
   font-family: 'Montserrat', sans-serif;
   font-size: 15vw;
   color: rgb(255, 255, 255);
