--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center" style='background-image: url("images/r-1.webp");'>
+      <div class="col-md-12 jumbotron text-center" style='background-image: url("Images/bacteria.jpg");'>
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.0.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="charts.js"></script>
 
@@ -70,7 +70,7 @@ p{
 }
 
 .jumbotron {
-  background-image: url("images/bacteria.jpg");
+  background-image: url("Images/bacteria.jpg");
   font-family: 'Montserrat', sans-serif;
   font-size: 15vw;
   color: rgb(255, 255, 255);
